...
                      unselectedLabelColor: AppTheme.textSecondary,
                      labelStyle: const TextStyle(
                        fontSize: 12,
                        fontWeight: FontWeight.w600,
                      ),
                      tabs: const [
                        Tab(text: 'Prihlásenie'),
                        Tab(text: 'Registrácia'),
                      ],
                    ),
                  ),
                  const SizedBox(height: 20),

...
